FIX modal main container position relative and z-index stable at 9999

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -109,13 +109,10 @@
   overflow: hidden;
 }
 
-.gpi-modal__main-container--opened {
+.gpi-modal__main-container {
   position: relative;
+  transition: z-index 0s linear 0.2s;
   z-index: 9999;
-}
-
-.gpi-modal__main-container--closed {
-  z-index: -9999;
 }
 
 @-webkit-keyframes fadeIn {
